<resources>
    <string name="app_name">PubText</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">王是</string>
    <string name="nav_header_subtitle">三厂</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">事项清单</string>
    <string name="menu_gallery">公告清单</string>
    <string name="menu_slideshow">提醒设置</string>

    <string name="home_second">Home Second</string>

    <string name="task_id">任务编号:</string>
    <string name="task_name">任务名称:</string>
    <string name="task_adress">任务地址:</string>
    <string name="notification_time_">通知时间：</string>
    <string name="set_time">选取时间</string>
    <string name="deadline_">截止时间：</string>
    <string name="start_time_">开始时间：</string>
    <string name="edit">编辑</string>
    <string name="sub_items_">子项目：</string>
    <string name="not_set">未设置</string>
    <string name="input_content">输入内容</string>

    <string name="urgent">紧急</string>
    <string name="important">重要</string>
    <string name="set_important">设为重要</string>
    <string name="set_urgent">设为紧急</string>
</resources>
